inital working bbaget

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -22,6 +22,10 @@ class: blog archive sidebar
 	<!-- <h4 class="headline-text">Menu</h4> -->
 	{% include break_deco_line.html %}
 	{% include recent_blog_posts.html %}
+	{% include break_deco.html %}
 	{% include side_categories.html %}
+	{% include break_deco.html %}
 	{% include tag_cloud.html %}
+	{% include break_deco.html %}
+	{% include advert.html %}
 </aside>
