--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,5 +27,7 @@ class: sidebar blog
 	{% include side_categories.html %}
 	{% include break_deco.html %}
 	{% include tag_cloud.html %}
+	{% include break_deco.html %}
+	{% include advert.html %}
 	{% include break_deco_line.html %}
 </aside>
