--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,22 +27,16 @@ License: http://creativecommons.org/licenses/MIT
 {% include boilerplate_css.html %}
 
 <body class="clearfix {{ page.class }}">
-	<div id="top-nav" class="clearfix">
-		{% include nav.html %}
-	</div>
 	<header id="site_header" role="banner" class="clearfix col-full">
 		{% include break_deco.html %}
 		<div id="logo">
-	       	<span class="site-description clearfix">Holiday rentals in the heart of Dordogne France</span>
+	       	<span class="site-description clearfix">Bbaget - Bread for thoughts and stuff</span>
 					<div class="clearfix"></div><!-- Divider -->
 	       		<a href="/" title="Please join us in celebrating the birth of">
 							<img src="{{ site.url }}/img/logo.png" alt="Holidays in Dordogne || La Vieille Dezie" />
 						</a>
 				<h1 class="site-title"><a href="/">{{ page.title }}</a></h1>  	
 		</div><!-- /#logo -->
-		<div id="mid-nav">
-			{% include nav.html %}
-		</div>
 	</header>
 	{% include break_deco_line.html %}
 	<div id="content-wrap" class="content clearfix">
