moved post images to /img/posts/

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ License: http://creativecommons.org/licenses/MIT
 <title>{{ site.title }} || {{ page.title }}</title>
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="{{ site.owner-name }}">
-<meta name="keywords" content="{{ page.keywords }}">
+<meta name="keywords" content="{{ site.keywords }}, {{ page.keywords }}">
 
 {% include boilerplate_css.html %}
 
