--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -8,9 +8,9 @@ class: blog archive sidebar
 	<div class="post{% if forloop.first %} first{% endif %}">
 		<h1 class="component-title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
 		<div class="post-meta">
-			<span class="date"><img src="/img/icons/ico_calendar.png" alt="" />{{ post.date | date_to_string }} | </span>
+			<span class="date"><img src="{{ site.url }}/img/icons/ico_calendar.png" alt="" />{{ post.date | date_to_string }} | </span>
 			<span class="categories">
-				<img src="/img/icons/ico_drawer.png" alt="" />
+				<img src="{{ site.url }}/img/icons/ico_drawer.png" alt="" />
 				Tags: {% for tag in post.tags limit: 3 %}<a href="/tags/{{ tag | replace:' ', '-' | downcase }}">{{ tag }}{% if forloop.last == false %}, {%endif %}</a> {% endfor %}
 			</span>
 		</div>
